--- a/frontend/src/components/index.css
+++ b/frontend/src/components/index.css
@@ -3,6 +3,10 @@
   padding: 20 20 20 20;
   width: 100vw;
   height: 100vh;
+  display: 'flex';
+  overflow: 'hidden';
+  overflow-y: 'scroll';
+  flex-direction: 'column';
 }
 
 @keyframes spinner {
@@ -28,4 +32,3 @@
   align-items: center;
   height: 350px;
 }
-App.js
